# js/api/api_pb.js
@@ -31,6 +31,7 @@ goog.exportSymbol('proto.api.JSONWebKeys', null, global);
 goog.exportSymbol('proto.api.Jwks', null, global);
 goog.exportSymbol('proto.api.ManagementToken', null, global);
 goog.exportSymbol('proto.api.Message', null, global);
+goog.exportSymbol('proto.api.RenderRequest', null, global);
 goog.exportSymbol('proto.api.SMS', null, global);
 goog.exportSymbol('proto.api.SMSBlast', null, global);
 goog.exportSymbol('proto.api.Scope', null, global);
@@ -6194,6 +6195,209 @@ proto.api.HTTPRequest.prototype.clearBody = function() {
  */
 proto.api.HTTPRequest.prototype.hasBody = function() {
   return jspb.Message.getField(this, 9) != null;
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.RenderRequest = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.RenderRequest, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.RenderRequest.displayName = 'proto.api.RenderRequest';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.RenderRequest.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.RenderRequest.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.RenderRequest} msg The msg instance to transform.
+ * @return {!Object}
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.api.RenderRequest.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    template: (f = msg.getTemplate()) && proto.api.Template.toObject(includeInstance, f),
+    data: (f = msg.getData()) && proto.api.Bytes.toObject(includeInstance, f)
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.RenderRequest}
+ */
+proto.api.RenderRequest.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.RenderRequest;
+  return proto.api.RenderRequest.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.RenderRequest} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.RenderRequest}
+ */
+proto.api.RenderRequest.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = new proto.api.Template;
+      reader.readMessage(value,proto.api.Template.deserializeBinaryFromReader);
+      msg.setTemplate(value);
+      break;
+    case 2:
+      var value = new proto.api.Bytes;
+      reader.readMessage(value,proto.api.Bytes.deserializeBinaryFromReader);
+      msg.setData(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.RenderRequest.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  proto.api.RenderRequest.serializeBinaryToWriter(this, writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the given message to binary data (in protobuf wire
+ * format), writing to the given BinaryWriter.
+ * @param {!proto.api.RenderRequest} message
+ * @param {!jspb.BinaryWriter} writer
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.api.RenderRequest.serializeBinaryToWriter = function(message, writer) {
+  var f = undefined;
+  f = message.getTemplate();
+  if (f != null) {
+    writer.writeMessage(
+      1,
+      f,
+      proto.api.Template.serializeBinaryToWriter
+    );
+  }
+  f = message.getData();
+  if (f != null) {
+    writer.writeMessage(
+      2,
+      f,
+      proto.api.Bytes.serializeBinaryToWriter
+    );
+  }
+};
+
+
+/**
+ * optional Template template = 1;
+ * @return {?proto.api.Template}
+ */
+proto.api.RenderRequest.prototype.getTemplate = function() {
+  return /** @type{?proto.api.Template} */ (
+    jspb.Message.getWrapperField(this, proto.api.Template, 1));
+};
+
+
+/** @param {?proto.api.Template|undefined} value */
+proto.api.RenderRequest.prototype.setTemplate = function(value) {
+  jspb.Message.setWrapperField(this, 1, value);
+};
+
+
+proto.api.RenderRequest.prototype.clearTemplate = function() {
+  this.setTemplate(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return {!boolean}
+ */
+proto.api.RenderRequest.prototype.hasTemplate = function() {
+  return jspb.Message.getField(this, 1) != null;
+};
+
+
+/**
+ * optional Bytes data = 2;
+ * @return {?proto.api.Bytes}
+ */
+proto.api.RenderRequest.prototype.getData = function() {
+  return /** @type{?proto.api.Bytes} */ (
+    jspb.Message.getWrapperField(this, proto.api.Bytes, 2));
+};
+
+
+/** @param {?proto.api.Bytes|undefined} value */
+proto.api.RenderRequest.prototype.setData = function(value) {
+  jspb.Message.setWrapperField(this, 2, value);
+};
+
+
+proto.api.RenderRequest.prototype.clearData = function() {
+  this.setData(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return {!boolean}
+ */
+proto.api.RenderRequest.prototype.hasData = function() {
+  return jspb.Message.getField(this, 2) != null;
 };
 
 
